--- a/src/main/webapp/addAccount.xhtml
+++ b/src/main/webapp/addAccount.xhtml
@@ -8,38 +8,32 @@
 
 	<ui:define name="content">
 
-		<h:head>
-			<meta http-equiv="Content-Type"
-				content="text/html; charset=ISO-8859-1" />
-			<title>Insert title here</title>
-			<h:outputStylesheet library="css" name="/style.css" />
-		</h:head>
-		<h:body>
-
-			<div class="content-wrapper">
-				<h:form>
-					<h:panelGrid columns="2" cellpadding="5">
-						<p:outputLabel value="Solde" for="balance" />
-						<p:inputText id="balance"
-							value="#{accountController.bankAccount.balance}" />
+<div class="container-fluid">
+<!-- <div class="addAccount"> -->
+		<h:form >
+			<h:panelGrid columns="2" cellpadding="5"  class="addAccount">
+				<p:outputLabel value="Solde" for="balance" />
+				<p:inputText id="balance"
+					value="#{accountController.bankAccount.balance}" />
 
 
-						<p:outputLabel value="Account Type" for="accountType" />
-						<p:selectOneMenu id="accountType"
-							value="#{accountController.bankAccount.accountType}">
-							<f:selectItem itemLabel="Savings Account"
-								itemValue="SAVINGS_ACCOUNT" />
-							<f:selectItem itemLabel="Current Account"
-								itemValue="CURRENT_ACCOUNT" />
-						</p:selectOneMenu>
+				<p:outputLabel value="Account Type" for="accountType" />
+				<p:selectOneMenu id="accountType"
+					value="#{accountController.bankAccount.accountType}">
+					<f:selectItem itemLabel="Savings Account"
+						itemValue="SAVINGS_ACCOUNT" />
+					<f:selectItem itemLabel="Current Account"
+						itemValue="CURRENT_ACCOUNT" />
+				</p:selectOneMenu>
 
 
-						<p:button value="Submit" action="#{accountController.saveAccount}" />
+				<p:button value="Submit" action="#{accountController.saveAccount}"  />
 
-					</h:panelGrid>
-				</h:form>
-			</div>
-		</h:body>
+			</h:panelGrid>
+		</h:form>
+
+</div>
+
 
 	</ui:define>
 </ui:composition>
