--- a/src/main/webapp/listClients.xhtml
+++ b/src/main/webapp/listClients.xhtml
@@ -18,22 +18,27 @@
 
 		<h:form>
 			<p:growl id="messages" showDetail="true" life="3000" />
+
+
 			<p:dataTable value="#{clientController.clients}" var="tempClient"
 				styleClass="et_datatable" editable="true" paginator="true" rows="10"
-				currentPageReportTemplate=" {startRecord}-{endRecord} de {totalRecords}"
+				currentPageReportTemplate=" {startRecord}-{endRecord} "
 				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="5,10,15" selectionMode="single"
 				rowKey="#{tempClient.id}"
+				emptyMessage="Il n'existe pas de client avec ce nom-là"
 				filteredValue="#{clientController.selectedClients}">
 
+				<p:column style="width:32px">
+					<p:rowToggler />
+				</p:column>
 
-
-				<p:column headerText="Nom" sortBy="#{tempClient.nom}"
-					filterBy="#{tempClient.nom}" filterMatchMode="contains">>
+				<p:column headerText="Nom" sortBy="#{tempClient.lastName}"
+					filterBy="#{tempClient.lastName}" filterMatchMode="contains">>
 					<h:outputText value="#{tempClient.lastName}" />
 				</p:column>
 
-				<p:column headerText="Prénom" sortBy="#{tempClient.prenom}">
+				<p:column headerText="Prénom" sortBy="#{tempClient.firstName}">
 					<h:outputText value="#{tempClient.firstName}" />
 				</p:column>
 
@@ -62,18 +67,102 @@
 				<p:column headerText="Mise à jour">
 
 					<h:commandLink id="i" value="" styleClass="fa fa-edit medium"
-						action="#{clientController.loadClient(tempClient.id)}" />
+						action="updateClient" />
 
 				</p:column>
 				<p:column headerText="Effacer" style="width:8%">
-				
+
 					<h:commandLink id="a" value="" styleClass="fa fa-trash medium"
 						onclick="if (!confirm('Vous êtes sûr de vouloir effacer ce client?')) return false"
-						action="#{clientController.removeClients}" />
+						action="#{clientController.removeClient(tempClient)}" />
 				</p:column>
 
 
 
+				<p:rowExpansion>
+					<p:panelGrid columns="3" style="width:600px">
+						<f:facet name="header">
+
+						</f:facet>
+						<h:outputText value="Nom : "
+							style="color:black;  font-weight: bold;" />
+						<h:outputText value="#{tempClient.lastName}" />
+						<h:outputText value="" />
+						<h:outputText value="Prénom : "
+							style="color:black;  font-weight: bold;" />
+						<h:outputText value="#{tempClient.firstName}" />
+						<h:outputText value="" />
+						<h:outputText value="N° Téléphone : "
+							style="color:black;  font-weight: bold;" />
+						<h:outputText value="#{tempClient.telephone}" />
+						<h:outputText value="" />
+						<h:outputText value="Addresse e-mail : "
+							style="color:black;  font-weight: bold;" />
+						<h:outputText value="#{tempClient.email}" />
+						<h:outputText value="" />
+						<h:outputText value="Adresse : "
+							style="color:black;  font-weight: bold;" />
+						<h:outputText value="" />
+						<h:outputText value="" />
+						<h:outputText value="" />
+						<h:outputText value="Voie : " style="color:black" />
+						<h:outputText
+							value="#{tempClient.address.streetNumber}, #{tempClient.address.streetName}" />
+						<h:outputText value="" />
+						<h:outputText value="Code Postal : " style="color:black" />
+						<h:outputText value="#{tempClient.address.postalCode}" />
+						<h:outputText value="" />
+						<h:outputText value="Ville : " style="color:black" />
+						<h:outputText value="#{tempClient.address.city}" />
+						<h:outputText value="Comptes : "
+							style="color:black;  font-weight: bold;" />
+						<h:outputText value="" />
+						<h:outputText value="" />
+
+						<h:outputText value=""
+							rendered="#{tempClient.currentAccount.accountNumber} > 0" />
+						<h:outputText value="Numéro compte courant : "
+							rendered="#{tempClient.currentAccount.accountNumber} > 0"
+							style="color:black" />
+						<h:outputText value="#{tempClient.currentAccount.accountNumber}"
+							rendered="#{tempClient.currentAccount.accountNumber} > 0" />
+
+						<h:outputText value=""
+							rendered="#{tempClient.currentAccount.creationDate} > 0" />
+						<h:outputText value="Date création : " style="color:black"
+							rendered="#{tempClient.currentAccount.creationDate} > 0" />
+						<h:outputText value="#{tempClient.currentAccount.creationDate}"
+							rendered="#{tempClient.currentAccount.creationDate} > 0" />
+
+						<h:outputText value=""
+							rendered="#{tempClient.currentAccount.balance} > 0" />
+						<h:outputText value="Solde : " style="color:black"
+							rendered="#{tempClient.currentAccount.balance} > 0" />
+						<h:outputText value="#{tempClient.currentAccount.balance}"
+							rendered="#{tempClient.currentAccount.balance} > 0" />
+
+						<h:outputText value=""
+							rendered="#{tempClient.savingsAccount.accountNumber} > 0" />
+						<h:outputText value="Numéro compte épargne : " style="color:black"
+							rendered="#{tempClient.savingsAccount.accountNumber} > 0" />
+						<h:outputText value="#{tempClient.savingsAccount.accountNumber}"
+							rendered="#{tempClient.savingsAccount.accountNumber} > 0" />
+
+						<h:outputText value=""
+							rendered="#{tempClient.savingsAccount.creationDate} > 0" />
+						<h:outputText value="Date création : " style="color:black"
+							rendered="#{tempClient.savingsAccount.creationDate} > 0" />
+						<h:outputText value="#{tempClient.savingsAccount.creationDate}"
+							rendered="#{tempClient.savingsAccount.creationDate} > 0" />
+
+						<h:outputText value=""
+							rendered="#{tempClient.savingsAccount.balance} > 0" />
+						<h:outputText value="Solde : " style="color:black"
+							rendered="#{tempClient.savingsAccount.balance} > 0" />
+						<h:outputText value="#{tempClient.savingsAccount.balance}"
+							rendered="#{tempClient.savingsAccount.balance} > 0" />
+					</p:panelGrid>
+				</p:rowExpansion>
 			</p:dataTable>
 
 		</h:form>
