--- a/src/main/webapp/addAccount.xhtml
+++ b/src/main/webapp/addAccount.xhtml
@@ -8,7 +8,7 @@
 
 	<ui:define name="content">
 
-<div class="container-fluid">
+<!-- <div class="container-fluid"> -->
 <!-- <div class="addAccount"> -->
 		<h:form >
 			<h:panelGrid columns="2" cellpadding="5"  class="addAccount">
@@ -32,7 +32,7 @@
 			</h:panelGrid>
 		</h:form>
 
-</div>
+<!-- </div> -->
 
 
 	</ui:define>
