--- a/src/main/webapp/addAccount.xhtml
+++ b/src/main/webapp/addAccount.xhtml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-<<<<<<< HEAD
 	xmlns:p="http://primefaces.org/ui" template="/template/template.xhtml">
 
 	<ui:define name="content">
@@ -27,7 +26,6 @@
 							itemValue="CURRENT_ACCOUNT" />
 					</p:selectOneMenu>
 
-
 					<p:button value="Submit" action="#{accountController.saveAccount}" />
 
 				</h:panelGrid>
@@ -38,38 +36,4 @@
 
 	</ui:define>
 </ui:composition>
-=======
-	xmlns:p="http://primefaces.org/ui">
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-	<title>Insert title here</title>
-</h:head>
-<h:body>
 
-	<h:form>
-		<h:panelGrid columns="3" cellpadding="5">
-			<p:outputLabel value="Balance" for="balance" />
-			<p:inputText id="balance"
-				value="#{accountController.bankAccount.balance}">
-				<f:convertNumber type="currency" currencySymbol="$" />
-			</p:inputText>
-			<p:message for="balance" />
-
-			<p:outputLabel value="Account Type" for="accountType" />
-			<p:selectOneMenu id="accountType"
-				value="#{accountController.bankAccount.accountType}">
-				<f:selectItem itemLabel="Savings Account"
-					itemValue="SAVINGS_ACCOUNT"/>
-				<f:selectItem itemLabel="Current Account"
-					itemValue="CURRENT_ACCOUNT" />
-			</p:selectOneMenu>
-
-		</h:panelGrid>
-
-		<h:commandButton value="Submit"
-				action="#{accountController.saveAccount}" />
-
-	</h:form>
-</h:body>
-</html>
->>>>>>> origin/master
