--- a/src/main/webapp/listClients.xhtml
+++ b/src/main/webapp/listClients.xhtml
@@ -67,7 +67,7 @@
 				<p:column headerText="Mise à jour">
 
 					<h:commandLink id="i" value="" styleClass="fa fa-edit medium"
-						action="updateClient" />
+						action="#{clientController.selectedClients.tempClient}" />
 
 				</p:column>
 				<p:column headerText="Effacer" style="width:8%">
