--- a/src/main/webapp/addAccount.xhtml
+++ b/src/main/webapp/addAccount.xhtml
@@ -9,29 +9,28 @@
 	<ui:define name="content">
 
 		<!-- <div class="container-fluid"> -->
-		<div class="addAccount">
-			<h:form>
-				<h:panelGrid columns="2" cellpadding="5" class="addAccount">
-					<p:outputLabel value="Solde" for="balance" />
-					<p:inputText id="balance"
-						value="#{accountController.bankAccount.balance}" />
+		<h:form id="addAccount">
+			<h:panelGrid columns="2" cellpadding="5" class="addAccount">
+				<p:outputLabel value="Solde" for="balance" />
+				<p:inputText id="balance"
+					value="#{accountController.bankAccount.balance}" />
 
 
-					<p:outputLabel value="Account Type" for="accountType" />
-					<p:selectOneMenu id="accountType"
-						value="#{accountController.bankAccount.accountType}">
-						<f:selectItem itemLabel="Savings Account"
-							itemValue="SAVINGS_ACCOUNT" />
-						<f:selectItem itemLabel="Current Account"
-							itemValue="CURRENT_ACCOUNT" />
-					</p:selectOneMenu>
+				<p:outputLabel value="Account Type" for="accountType" />
+				<p:selectOneMenu id="accountType"
+					value="#{accountController.bankAccount.accountType}">
+					<f:selectItem itemLabel="Savings Account"
+						itemValue="SAVINGS_ACCOUNT" />
+					<f:selectItem itemLabel="Current Account"
+						itemValue="CURRENT_ACCOUNT" />
+				</p:selectOneMenu>
 
-					<p:button value="Submit" action="#{accountController.saveAccount}" />
+				<p:commandButton value="Submit" oncomplet="#{accountController.saveAccount}" />
+			</h:panelGrid>
 
-				</h:panelGrid>
-			</h:form>
+		</h:form>
 
-		</div>
+
 
 
 	</ui:define>
