--- a/src/main/webapp/addAccount.xhtml
+++ b/src/main/webapp/addAccount.xhtml
@@ -9,49 +9,35 @@
 	<ui:define name="content">
 
 		<!-- <div class="container-fluid"> -->
-<<<<<<< HEAD
-		<h:form id="addAccount">
-			<h:panelGrid columns="2" cellpadding="5" class="addAccount">
-				<p:outputLabel value="Solde" for="balance" />
-				<p:inputText id="balance"
-					value="#{accountController.bankAccount.balance}" />
-=======
+
 		<div class="addAccount">
 			<h:form>
 				<h:panelGrid columns="3" cellpadding="5" class="addAccount">
 					<p:outputLabel value="Solde" for="balance" />
 					<p:inputText id="balance"
 						value="#{accountController.bankAccount.balance}" label="currency">
-						<f:convertNumber type="currency" currencySymbol="$"/>
+						<f:convertNumber type="currency" currencySymbol="$" />
 					</p:inputText>
 					<p:message for="balance"></p:message>
->>>>>>> origin/master
 
 
-				<p:outputLabel value="Account Type" for="accountType" />
-				<p:selectOneMenu id="accountType"
-					value="#{accountController.bankAccount.accountType}">
-					<f:selectItem itemLabel="Savings Account"
-						itemValue="SAVINGS_ACCOUNT" />
-					<f:selectItem itemLabel="Current Account"
-						itemValue="CURRENT_ACCOUNT" />
-				</p:selectOneMenu>
 
-<<<<<<< HEAD
-				<p:commandButton value="Submit" oncomplet="#{accountController.saveAccount}" />
-			</h:panelGrid>
+					<p:outputLabel value="Account Type" for="accountType" />
+					<p:selectOneMenu id="accountType"
+						value="#{accountController.bankAccount.accountType}">
+						<f:selectItem itemLabel="Savings Account"
+							itemValue="SAVINGS_ACCOUNT" />
+						<f:selectItem itemLabel="Current Account"
+							itemValue="CURRENT_ACCOUNT" />
+					</p:selectOneMenu>
 
-		</h:form>
 
-=======
 
 				</h:panelGrid>
-				<p:commandButton value="Submit" action="#{accountController.saveAccount}" />
+				<p:commandButton value="Submit"
+					action="#{accountController.saveAccount}" />
 			</h:form>
->>>>>>> origin/master
-
-
-
+			</div>
 	</ui:define>
 </ui:composition>
 
