--- a/src/main/webapp/listClients.xhtml
+++ b/src/main/webapp/listClients.xhtml
@@ -11,23 +11,22 @@
 
 	<ui:define name="content">
 
-		<f:metadata>
-			<f:event type="preRenderView"
-				listener="#{clientController.loadClients()}" />
-		</f:metadata>
 
-		<h:form>
+
+		<h:form id="formClients">
+
 			<p:growl id="messages" showDetail="true" life="3000" />
-
-
-			<p:dataTable value="#{clientController.clients}" var="tempClient"
-				styleClass="et_datatable" editable="true" paginator="true" rows="10"
+			<p:dataTable id="tempClients" var="tempClient"
+				value="#{clientController.clients}" styleClass="et_datatable"
+				editable="true" paginator="true" rows="10"
 				currentPageReportTemplate=" {startRecord}-{endRecord} "
 				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="5,10,15" selectionMode="single"
 				rowKey="#{tempClient.id}"
 				emptyMessage="Il n'existe pas de client avec ce nom-là"
 				filteredValue="#{clientController.selectedClients}">
+
+<!-- colonnes affichage -->
 
 				<p:column style="width:32px">
 					<p:rowToggler />
@@ -64,12 +63,26 @@
 					<h:outputText value="" />
 				</p:column>
 
-				<p:column headerText="Mise à jour">
+<!-- boutons -->
 
-					<h:commandLink id="i" value="" styleClass="fa fa-edit medium"
-						action="#{clientController.selectedClients.tempClient}" />
-
+				<p:column headerText="Mise à jour" style="width:8%">
+					<p:commandLink update=":formClients:display"
+						oncomplete="PF('detailsDlg').show()"
+						image="ui-icon ui-icon-search" title="Details">
+						<f:setPropertyActionListener value="#{client}"
+							target="#{clientController.selectedClient}" />
+						<h:outputText styleClass="ui-icon ui-icon-search" />
+					</p:commandLink>
 				</p:column>
+
+
+				<!-- 				<p:column headerText="Mise à jour"> -->
+
+				<!-- 					<h:commandLink id="i" value="" styleClass="fa fa-edit medium" -->
+				<!-- 						action="#{clientController.loadClient(tempClient)}" /> -->
+
+				<!-- 				</p:column> -->
+
 				<p:column headerText="Effacer" style="width:8%">
 
 					<h:commandLink id="a" value="" styleClass="fa fa-trash medium"
@@ -77,6 +90,47 @@
 						action="#{clientController.removeClient(tempClient)}" />
 				</p:column>
 
+
+<!-- popup update -->
+
+				<p:dialog header="Update" widgetVar="detailsDlg" resizable="false"
+					width="750" height="400" showEffect="clip" hideEffect="clip"
+					modal="true">
+
+					<h:panelGrid id="display" columns="2" cellpadding="4"
+						style="margin:0 auto;">
+
+						<h:outputText value="Last Name" for="lastName"
+							style="padding-left: 30px; padding-right: 30px;" />
+
+						<p:inputText id="lastName"
+							value="#{clientController.selectedClient.lastName}"
+							label="lastName" />
+
+						<h:outputText value="First Name" for="firstName"
+							style="padding-left: 30px; padding-right: 30px;" />
+
+						<p:inputText id="firstName"
+							value="#{clientController.selectedClient.firstName}"
+							label="firstName" />
+
+					</h:panelGrid>
+
+					<p:outputPanel layout="block" style="text-align:center">
+						<br />
+						<br />
+						<p:commandButton value="Update"
+							update=":formClients:tempClients, :formClients:messages"
+							actionListener="#{clientController.updateClient}"
+							oncomplete="PF('detailsDlg').hide()" />
+						<p:commandButton value="Cancel" onclick="PF('detailsDlg').hide()"
+							type="button" />
+					</p:outputPanel>
+
+				</p:dialog>
+
+
+<!-- fiche client -->
 
 
 				<p:rowExpansion>
@@ -120,47 +174,47 @@
 						<h:outputText value="" />
 
 						<h:outputText value=""
-							rendered="#{tempClient.currentAccount.accountNumber} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.accountNumber} >0" />
 						<h:outputText value="Numéro compte courant : "
-							rendered="#{tempClient.currentAccount.accountNumber} > 0"
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.accountNumber} >0"
 							style="color:black" />
-						<h:outputText value="#{tempClient.currentAccount.accountNumber}"
-							rendered="#{tempClient.currentAccount.accountNumber} > 0" />
+						<h:outputText value="#{tempClient.bankAccount.accountNumber}"
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.accountNumber} >0" />
 
 						<h:outputText value=""
-							rendered="#{tempClient.currentAccount.creationDate} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.creationDate} >0" />
 						<h:outputText value="Date création : " style="color:black"
-							rendered="#{tempClient.currentAccount.creationDate} > 0" />
-						<h:outputText value="#{tempClient.currentAccount.creationDate}"
-							rendered="#{tempClient.currentAccount.creationDate} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.creationDate} >0" />
+						<h:outputText value="#{tempClient.bankAccount.creationDate}"
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.creationDate} >0" />
 
 						<h:outputText value=""
-							rendered="#{tempClient.currentAccount.balance} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.balance} >0" />
 						<h:outputText value="Solde : " style="color:black"
-							rendered="#{tempClient.currentAccount.balance} > 0" />
-						<h:outputText value="#{tempClient.currentAccount.balance}"
-							rendered="#{tempClient.currentAccount.balance} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.balance} >0" />
+						<h:outputText value="#{tempClient.bankAccount.balance}"
+							rendered="#{tempClient.bankAccount.accountType} == 0 and #{tempClient.bankAccount.balance} >0" />
 
 						<h:outputText value=""
-							rendered="#{tempClient.savingsAccount.accountNumber} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.accountNumber} >0" />
 						<h:outputText value="Numéro compte épargne : " style="color:black"
-							rendered="#{tempClient.savingsAccount.accountNumber} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.accountNumber} >0" />
 						<h:outputText value="#{tempClient.savingsAccount.accountNumber}"
-							rendered="#{tempClient.savingsAccount.accountNumber} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.accountNumber} >0" />
 
 						<h:outputText value=""
-							rendered="#{tempClient.savingsAccount.creationDate} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.creationDate} >0" />
 						<h:outputText value="Date création : " style="color:black"
-							rendered="#{tempClient.savingsAccount.creationDate} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.creationDate} >0" />
 						<h:outputText value="#{tempClient.savingsAccount.creationDate}"
-							rendered="#{tempClient.savingsAccount.creationDate} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.creationDate} >0" />
 
 						<h:outputText value=""
-							rendered="#{tempClient.savingsAccount.balance} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.balance} >0" />
 						<h:outputText value="Solde : " style="color:black"
-							rendered="#{tempClient.savingsAccount.balance} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.balance} >0" />
 						<h:outputText value="#{tempClient.savingsAccount.balance}"
-							rendered="#{tempClient.savingsAccount.balance} > 0" />
+							rendered="#{tempClient.bankAccount.accountType} == 1 and #{tempClient.bankAccount.balance} >0" />
 					</p:panelGrid>
 				</p:rowExpansion>
 			</p:dataTable>
