--- a/src/main/webapp/listClients.xhtml
+++ b/src/main/webapp/listClients.xhtml
@@ -68,23 +68,23 @@
 				<!-- boutons -->
 
 
- 				<p:column headerText="Mise à jour" style="width:8%"> 
-					<p:commandLink update=":formClients:display" 
-						oncomplete="PF('detailsDlg').show()" 
- 						image="ui-icon ui-icon-search" title="Details">
-						<f:setPropertyActionListener value="#{client}"
-							target="#{clientController.selectedClient}" />
-						<h:outputText styleClass="ui-icon ui-icon-search" />
-					</p:commandLink>
-				</p:column>
+<!--  				<p:column headerText="Mise à jour" style="width:8%">  -->
+<!-- 					<p:commandLink update=":formClients:display"  -->
+<!-- 						oncomplete="PF('detailsDlg').show()"  -->
+<!--  						image="ui-icon ui-icon-search" title="Details"> -->
+<!-- 						<f:setPropertyActionListener value="#{client}" -->
+<!-- 							target="#{clientController.selectedClient}" /> -->
+<!-- 						<h:outputText styleClass="ui-icon ui-icon-search" /> -->
+<!-- 					</p:commandLink> -->
+<!-- 				</p:column> -->
 
 
-<!-- 								<p:column headerText="Mise à jour"> -->
+								<p:column headerText="Mise à jour">
 
-<!-- 									<h:commandLink id="i" value="" styleClass="fa fa-edit medium" -->
-<!-- 										action="#{clientController.loadClient(tempClient)}" /> -->
+									<h:commandLink id="i" value="" styleClass="fa fa-edit medium"
+										action="#{clientController.loadClient(tempClient)}" />
 
-<!-- 								</p:column> -->
+								</p:column>
 
 				<p:column headerText="Effacer" style="width:8%">
 
