--- a/src/main/webapp/ajoutClient.xhtml
+++ b/src/main/webapp/ajoutClient.xhtml
@@ -1,47 +1,61 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui" template="/template/template.xhtml">
 
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-	<title>Insert title here</title>
-</h:head>
-<h:body>
+	<h:head>
+		<meta http-equiv="Content-Type"
+			content="text/html; charset=ISO-8859-1" />
+		<title>Insert title here</title>
+	</h:head>
+	<ui:define name="content">
+		<h:body>
 
-	<h:form>
-		<h:panelGrid columns="2" cellpadding="5">
-			<p:outputLabel value="Nom" for="nom" />
-			<p:inputText id="nom" value="#{clientController.client.lastName}" />
-			
-			<p:outputLabel value="Prénom" for="prenom" />
-			<p:inputText id="prenom" value="#{clientController.client.firstName}" />
+			<h:form>
+				<h:panelGrid columns="2" cellpadding="5">
+					<p:outputLabel value="Nom" for="nom" />
+					<p:inputText id="nom" value="#{clientController.client.lastName}" />
 
-			<p:outputLabel value="streetNumber" for="streetNumber" />
-			<p:inputText id="streetNumber"
-				value="#{clientController.client.address.streetNumber}" />
-			
+					<p:outputLabel value="Prénom" for="prenom" />
+					<p:inputText id="prenom"
+						value="#{clientController.client.firstName}" />
 
-			<p:outputLabel value="streetName" for="streetName" />
-			<p:inputText id="streetName"
-				value="#{clientController.client.address.streetName}" />
-			
-			<p:outputLabel value="postalCode" for="postalCode" />
-			<p:inputText id="postalCode"
-				value="#{clientController.client.address.postalCode}" />
-			
-			<p:outputLabel value="city" for="city" />
-			<p:inputText id="city"
-				value="#{clientController.client.address.city}" />
-			
-			
-			<h:commandButton value="Submit"
-				action="#{clientController.saveClient}" />
+					<p:outputLabel value="streetNumber" for="streetNumber" />
+					<p:inputText id="streetNumber"
+						value="#{clientController.client.address.streetNumber}" />
 
-		</h:panelGrid>
-	</h:form>
-</h:body>
-</html>
+
+					<p:outputLabel value="streetName" for="streetName" />
+					<p:inputText id="streetName"
+						value="#{clientController.client.address.streetName}" />
+
+					<p:outputLabel value="postalCode" for="postalCode" />
+					<p:inputText id="postalCode"
+						value="#{clientController.client.address.postalCode}" />
+
+					<p:outputLabel value="city" for="city" />
+					<p:inputText id="city"
+						value="#{clientController.client.address.city}" />
+					
+					
+					<h:outputLabel for="soldeInput" value="Solde : *" />
+					<p:inputText id="soldeInput" value="#{clientController.bankAccount.balance}"
+						label="soldeInput" required="true" />
+
+					<p:outputLabel for="selectType" value="Type : *" />
+					<p:selectOneMenu id="selectType" value="#{clientController.bankAccount.accountType}">
+						<f:selectItem itemLabel="Compte Courant" itemValue="CURRENT_ACCOUNT" />
+						<f:selectItem itemLabel="Compte Epargne" itemValue="SAVINGS_ACCOUNT" />
+					</p:selectOneMenu>
+
+					<p:commandButton value="Submit"
+						action="#{clientController.saveClient}" />
+
+				</h:panelGrid>
+			</h:form>
+		</h:body>
+	</ui:define>
+</ui:composition>
