--- a/src/main/webapp/addAccount.xhtml
+++ b/src/main/webapp/addAccount.xhtml
@@ -32,8 +32,8 @@
 					</p:selectOneMenu>
 
 				</h:panelGrid>
-				<p:commandButton value="Submit"
-					action="#{accountController.saveAccount}" />
+				<p:commandButton value="Submit" 
+					action="#{accountController.saveAccount()}" />
 			</h:form>
 			</div>
 	</ui:define>
