--- a/src/main/webapp/ajoutClient.xhtml
+++ b/src/main/webapp/ajoutClient.xhtml
@@ -51,10 +51,11 @@
 						<f:selectItem itemLabel="Compte Epargne" itemValue="SAVINGS_ACCOUNT" />
 					</p:selectOneMenu>
 
-					<p:commandButton value="Submit"
-						action="#{clientController.saveClient}" />
+				
 
 				</h:panelGrid>
+					<p:commandButton value="Submit"
+						action="#{clientController.saveClient2}" />
 			</h:form>
 		</h:body>
 	</ui:define>
