--- a/src/main/webapp/ajoutClient.xhtml
+++ b/src/main/webapp/ajoutClient.xhtml
@@ -51,7 +51,7 @@
 				</p:selectOneMenu>
 
 				<p:commandButton value="Submit"
-					action="#{clientController.saveClient2}" />
+					action="#{clientController.saveClientAndAccount}" />
 
 
 			</h:panelGrid>
