--- a/src/main/webapp/listAccount.xhtml
+++ b/src/main/webapp/listAccount.xhtml
@@ -7,10 +7,10 @@
 	xmlns:p="http://primefaces.org/ui" template="/template/template.xhtml">
 
 	<ui:define name="content">
-<!-- 		<f:metadata> -->
-<!-- 			<f:event type="preRenderView" -->
-<!-- 				listener="#{accountController.loadAccount()}" /> -->
-<!-- 		</f:metadata> -->
+		<f:metadata>
+			<f:event type="preRenderView"
+				listener="#{accountController.loadAccount()}" />
+		</f:metadata>
 
 		<h:form>
 
