--- a/src/main/webapp/ajoutClient.xhtml
+++ b/src/main/webapp/ajoutClient.xhtml
@@ -12,43 +12,74 @@
 		<div class="addClient">
 			<h:form>
 				<fieldset id="fieldset">
-				<legend>Données personnelles</legend>
-					<h:panelGrid columns="2" cellpadding="5">
+					<legend>Données personnelles</legend>
+					<h:panelGrid columns="3" cellpadding="5">
 						<p:outputLabel value="Nom" for="nom" />
-						<p:inputText id="nom" value="#{clientController.client.lastName}" />
+						<p:inputText id="nom" value="#{clientController.client.lastName}"
+							required="true">
+							<f:validateRegex pattern="[a-zA-Z]{2,50}" />
+						</p:inputText>
+						<p:message for="nom" />
 
 						<p:outputLabel value="Prénom" for="prenom" />
 						<p:inputText id="prenom"
-							value="#{clientController.client.firstName}" />
+							value="#{clientController.client.firstName}" required="true">
+							<f:validateRegex pattern="[a-zA-Z]{2,50}" />
+						</p:inputText>
+						<p:message for="prenom" />
+					</h:panelGrid>
 
-						<p:outputLabel value="streetNumber" for="streetNumber" />
+					<label id="label">Addresse</label>
+					<h:panelGrid columns="3" cellpadding="5">
+						<p:outputLabel value="Numéro" for="streetNumber" />
 						<p:inputText id="streetNumber"
-							value="#{clientController.client.address.streetNumber}" />
+							value="#{clientController.client.address.streetNumber}">
+							<f:validateRegex pattern="[0-9]{1,5}" />
+						</p:inputText>
+						<p:message for="streetNumber" />
 
-
-						<p:outputLabel value="streetName" for="streetName" />
+						<p:outputLabel value="Rue" for="streetName" />
 						<p:inputText id="streetName"
-							value="#{clientController.client.address.streetName}" />
+							value="#{clientController.client.address.streetName}">
+							<!-- 							<f:validateRegex pattern="" /> -->
+						</p:inputText>
+						<p:message for="streetName" />
 
-						<p:outputLabel value="postalCode" for="postalCode" />
+						<p:outputLabel value="Code postal" for="postalCode" />
 						<p:inputText id="postalCode"
-							value="#{clientController.client.address.postalCode}" />
+							value="#{clientController.client.address.postalCode}" size="5">
+							<f:validateRegex pattern="^[0-9]{5,5}$" />
+						</p:inputText>
+						<p:message for="postalCode" />
 
-						<p:outputLabel value="city" for="city" />
+						<p:outputLabel value="Ville" for="city" />
 						<p:inputText id="city"
-							value="#{clientController.client.address.city}" />
+							value="#{clientController.client.address.city}">
+							<f:validateRegex pattern="[a-zA-Z]" />
+						</p:inputText>
+						<p:message for="city" />
+					</h:panelGrid>
+
+					<label id="label">Coordonnées</label>
+					<h:panelGrid columns="2" cellpadding="5">
+						<p:outputLabel value="N° téléphone" for="telephone" />
+						<p:inputText id="telephone"
+							value="#{clientController.client.telephone}" />
+
+						<p:outputLabel value="Email" for="email" />
+						<p:inputText id="email" value="#{clientController.client.email}" />
 					</h:panelGrid>
 				</fieldset>
 
 				<fieldset id="fieldset">
 					<legend>Compte Bancaire</legend>
 					<h:panelGrid columns="2" cellpadding="5">
-						<h:outputLabel for="soldeInput" value="Solde : * " />
+						<h:outputLabel for="soldeInput" value="Solde" />
 						<p:inputText id="soldeInput"
 							value="#{clientController.bankAccount.balance}"
 							label="soldeInput" required="true" />
 
-						<p:outputLabel for="selectType" value="Type : * " />
+						<p:outputLabel for="selectType" value="Type" />
 						<p:selectOneMenu id="selectType"
 							value="#{clientController.bankAccount.accountType}">
 							<f:selectItem itemLabel="Compte Courant"
@@ -59,7 +90,8 @@
 					</h:panelGrid>
 				</fieldset>
 				<p:commandButton value="Submit"
-					action="#{clientController.saveClientAndAccount}" />
+					action="#{clientController.saveClientAndAccount}"
+					validateClient="true" />
 
 
 
